Update Final - HocVT

--- a/WebForm/Pages/Shared/QuanLyChiPhi_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyChiPhi_Them.cshtml
@@ -30,7 +30,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Giá</label>
-                                <input type="number" asp-for="chiphi.Gia" class="form-control" placeholder="Nhập Giá">
+                                <input type="number" asp-for="chiphi.Gia" required class="form-control" placeholder="Nhập Giá">
                             </div>
                             <input type="submit" value="Thêm" class="btn btn-primary mr-2" />
                         </form>
