--- a/WebForm/Pages/Shared/QuanLyPhanCong_Sua.cshtml
+++ b/WebForm/Pages/Shared/QuanLyPhanCong_Sua.cshtml
@@ -33,7 +33,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Nhiệm vụ</label>
-                                <input type="text" class="form-control" value="@obj.Nhiemvu" asp-for="phancong.Nhiemvu" placeholder="Nhiệm vụ">
+                                <input type="text" class="form-control" required value="@obj.Nhiemvu" asp-for="phancong.Nhiemvu" placeholder="Nhiệm vụ">
                             </div>
                             <input type="submit" value="Sửa" asp-page-handler="edit" class="btn btn-primary mr-2" />
                         </form>
