--- a/WebForm/Pages/Shared/QuanLyPhanCong_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyPhanCong_Them.cshtml
@@ -30,7 +30,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Nhiệm vụ</label>
-                                <input type="text" class="form-control" asp-for="phancong.Nhiemvu" placeholder="Nhiệm vụ">
+                                <input type="text" class="form-control" required asp-for="phancong.Nhiemvu" placeholder="Nhiệm vụ">
                             </div>
                             <input type="submit" value="Thêm" asp-page-handler="add" class="btn btn-primary mr-2" />
                         </form>
